# confident-confidant

./: .gitignore  CHANGES.md  LICENSE  README.md  cc-config.md  cc.py  example_config.md  obsidian-recording-transcript.py  pyproject.toml
cc/: __init__.py  __main__.py  config.py  env.py  files.py  md.py  meeting.py  output_note.py  vault.py
cc/llm/: __init__.py  summarize.py  transcribe.py
cc/transcribe/: README.md  __init__.py  __main__.py  core.py  stitch.py  workdir.py
cc/transcribe/diarize/: README.md  __init__.py  __main__.py  core.py  format.py  identify.py  label.py  tui.py
cc/transcribe/diarize/llm/: transcribe_chunks.py
cc/transcribe/llm/: __init__.py  reformat_stitched_transcript.py  transcribe_chunks.py
cc/transcribe/split/: __init__.py  choose_silence_cuts.py  core.py  env.py
tests/: test_config.py  test_identify.py  test_link_resolution.py  test_md.py  test_summarize.py  test_tui.py  test_vault.py
tests/e2e/: conftest.py  generate_audio.py  test_coco.py  test_summarize.py  test_transcribe.py  test_transcribe_diarize.py  test_transcribe_label.py
tests/e2e/fixtures/: samuel-beckett-waiting-for-godot-act-1.md  wendell-berry-why-i-am-not-going-to-buy-a-computer.md
tests/transcribe/diarize/: test_label.py
tests/transcribe/split/: test_choose_silence_cuts.py  test_core.py
