[project]
name = "confident-confidant"
version = "0.2.0"
description = "Use spooky math to transform audio notes into transcripts and summaries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "hjson",
	"litellm",
	"openai",
]

[dependency-groups]
dev = [
  "ruff",
	"mypy",
	"mypy-extensions",
	"pytest",
]

[tool.ruff]
line-length = 105

[[tool.mypy.overrides]]
module = [
  "hjson",
]
ignore_missing_imports = true


[tool.mypy]
mypy_path = "cc.py"
namespace_packages = true
explicit_package_bases = true
exclude = '''(?x)(
    build/
    | dist/
    | \S+\.egg-info/
)'''
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
